Visual Improvements Overall + Header Implementation

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -13,8 +13,11 @@ RUN npm install
 # Copy the rest of the application code
 COPY . .
 
+# Clear Next.js cache
+RUN rm -rf .next
+
 # Expose the port on which the app will run
 EXPOSE 3000
 
-# Start the Next.js app in development mode
+# Start the Next.js app in development mode with fast refresh
 CMD ["npm", "run", "dev"]
