Complete website backup before overhaul

--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
     "docker-dev": "docker-compose -f docker-compose.dev.yml up --build"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.20",
+    "chart.js": "^4.4.5",
     "framer-motion": "^11.3.17",
+    "lucide-react": "^0.453.0",
     "next": "14.2.5",
+    "postcss": "^8.4.47",
     "react": "^18",
-    "react-dom": "^18"
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18",
+    "recharts": "^2.13.0",
+    "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
     "eslint": "^8",
-    "eslint-config-next": "14.2.5",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "eslint-config-next": "14.2.5"
   }
 }
