--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "docker-dev": "docker-compose -f docker-compose.dev.yml up --build"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "firebase": "^11.0.1",
     "framer-motion": "^11.3.17",
     "next": "14.2.5",
