--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^11.3.17",
     "helmet": "^8.0.0",
     "hpp": "^0.2.3",
+    "lucide-react": "^0.474.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
