--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "firebase": "^11.0.1",
     "framer-motion": "^11.3.17",
