--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@vercel/analytics": "^1.5.0",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "firebase": "^11.0.1",
@@ -20,9 +21,11 @@
     "lucide-react": "^0.474.0",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "reactflow": "^11.11.4"
   },
   "devDependencies": {
+    "@types/react": "19.0.8",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
